--- a/PacketViewer/PacketViewer.csproj
+++ b/PacketViewer/PacketViewer.csproj
@@ -84,7 +84,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MiscFuncs.cs" />
+    <Compile Include="Network\IPacketList.cs" />
+    <Compile Include="Network\PacketList.cs" />
     <Compile Include="Network\PacketProcessor.cs" />
+    <Compile Include="Network\PacketQueue.cs" />
     <Compile Include="Network\PacketTranslator.cs" />
     <Compile Include="Network\Packet_old.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
