crypto na/eu update (thanks to neowutran)

--- a/PacketViewer/PacketViewer.csproj
+++ b/PacketViewer/PacketViewer.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Configuration.cs" />
     <Compile Include="Classes\IPacketInput.cs" />
     <Compile Include="Classes\PacketFilter.cs" />
     <Compile Include="Classes\TeraLogReader.cs" />
