Woops, too much cleanup

--- a/PacketViewer/PacketViewer.csproj
+++ b/PacketViewer/PacketViewer.csproj
@@ -145,6 +145,11 @@
     <EmbeddedResource Include="Libs\Tera.Core.dll" />
     <EmbeddedResource Include="Libs\Tera.Sniffing.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Libs\serverlist.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
